--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Catastrophe</string>
+    <string name="clear_button">Clear Canvas</string>
+    <string name="kittens_remaining">Kittens Remaining: %d</string>
+    <string name="time">Time: </string>
 </resources>
