Music options implemented.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
 
     <string name="sound_on">SOUND : ON</string>
     <string name="sound_off">SOUND : OFF</string>
+    <string name="music_on">MUSIC : ON</string>
+    <string name="music_off">MUSIC : OFF</string>
 </resources>
