--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Catastrophe</string>
     <string name="clear_button">Clear Canvas</string>
     <string name="kittens_remaining">Kittens Remaining: %d</string>
-    <string name="time">Time: </string>
+    <string name="time">Time: %1$s:%2$s</string>
     <string name="start_button">Start!</string>
 
     <string name="sound_on">SOUND : ON</string>
